<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">Taxi Android</string>
    <string name="description">Aplicativo para solicitações de táxis próximos ao local de onde você está!</string>
    
    <!-- AlertDialog -->
    
    <string name="ad_title_error">Ocorreu um erro!</string>
    <string name="ad_title_alert">Atenção!</string>
    <string name="ad_content_error_off">O servidor não está disponível.</string>
    <string name="ad_content_error_unexpected">Aconteceu um erro inesperado na aplicação.</string>
    <string name="ad_button_positive">OK</string>
    <string name="ad_button_yes">Sim</string>
    <string name="ad_button_no">Não</string>
    <string name="ad_button_negative">Cancelar</string>
    
    <!-- Balloon -->
    
    <string name="balloon_item_title">ballon_item_title</string>
    <string name="balloon_item_snippet">balloon_item_snippet</string>
    <string name="balloon_call_taxi">Chamar esse táxi?</string>
    <string name="balloon_error_title">Ocorreu um erro</string>
    <string name="balloon_error_distance">Impossível traçar rota para esse local. Você parece estar muito longe.</string>
    
    <!-- Configuração do Web Service -->
    
    <string name="url_webservice">http://177.71.226.121/txandroid/</string>
    <string name="url_authentication">user/</string>
    <string name="url_login_user">login/</string>
    <string name="url_create_user">createuser/</string>
    <string name="url_update_user_location">updateuserloc/</string>
    <string name="url_get_taxis">gettaxis/</string>
    <string name="url_request_taxi">requesttaxi/</string>
    <string name="url_status_request">statusrequest/</string>
    <string name="url_records">getrecords/</string>
    <string name="url_help">http://www.google.com.br</string>
    
	<string name="form_id">user_login</string>
	<string name="form_id_login">user_login</string>
	<string name="form_id_new">user_new</string>
	<string name="form_id_update_loc">user_update_loc</string>
	<string name="form_id_get_taxis">user_get_taxis</string>
	<string name="form_id_request_taxi">request_taxi</string>
	<string name="form_id_status_request">status_request</string>
	<string name="form_id_records">get_records</string>
	
	<string name="login_name">earthlost</string>
    <string name="login_pass">fvs24862*</string>
    
    <!-- Configuration -->
    
    <string name="config_alter">Alterar meus dados</string>
    <string name="config_vehicle">Veículo *</string>
    <string name="config_rg">RG *</string>
    <string name="config_cpf">CPF *</string>
    <string name="config_plaque">Placa do veículo *</string>
    <string name="config_license">Número da licença *</string>
    <string name="config_cnh">CNH *</string>
    <string name="config_lang">Idiomas fluentes *</string>
    <string name="config_lang_pt">Português</string>
    <string name="config_lang_en">Inglês</string>
    <string name="config_lang_es">Espanhol</string>
    
    <!-- ClientMap -->
	
	<string name="cm_error_json">Ocorreu um erro inesperado na leitura dos dados do servidor.</string>
	<string name="cm_pd_request_msg">Aguarde, estamos enviando a sua solicitação..</string>
	<string name="cm_pd_wait_request">Por favor, aguarde até que o taxista responda.\n\nTempo restante: </string>
	<string name="cm_pd_wait_request_seconds"> segundos</string>
	<string name="cm_ad_request_taxi_title_sucess">O táxi está a caminho!</string>
	<string name="cm_ad_request_taxi_title_no_sucess">Pedido negado!</string>
	<string name="cm_pd_request_taxi_title_sucess">Pedido enviado com sucesso!</string>
	<string name="cm_ad_request_taxi_title_error">Ocorreu um erro!</string>
    <string name="cm_ad_request_taxi_content">Por favor aguarde até que o taxista responda a sua requisição.</string>
    <string name="cm_ad_request_taxi_content_sucess">O taxista aceitou o seu pedido e está a caminho, por favor aguarde-o.</string>
    <string name="cm_ad_response_taxi_no_success">O tempo foi excedido ou o taxista não aceitou a sua solicitação, por favor tente novamente ou escolha outro.</string>
	<string name="cm_error_request_taxi">O pedido não pode ser enviado, tente novamente mais tarde.</string>
	
	<!-- Favorites -->
	
	<string name="fav_"></string>
	
    <!-- Gps -->
    
    <string name="gps_disabled">GPS desativado</string>
    <string name="gps_disabled_message">Ative o seu GPS para prosseguir.</string>
    
    <!-- Login -->
    
    <string name="login_remember">Lembrar os meus dados</string>
    <string name="login_button_enter">Entrar</string>
    <string name="login_email_description">example@gmail.com</string>
    <string name="login_error_authentication">Os dados informados estão incorretos!</string>
    <string name="login_error_connection">Ocorreu um erro na conexão, tente novamente mais tarde!</string>
    
    <!-- Main -->
	
	<string name="main_welcome">Seja bem vindo(a)! Escolha uma opção abaixo:</string>
	<string name="main_button_login">Efetuar Login</string>
	<string name="main_button_exit">Sair</string>
	
	<!-- Map -->
	
	<string name="map_search_point">Buscando táxis próximos a você, aguarde..</string>
	<string name="map_pd_update_map">Atualizando a sua localização..</string>
	
	<!-- RecoverPass -->
	
	<string name="rp_title">Informe o seu e-mail</string>
	<string name="rp_button">Me envie uma nova senha</string>
	
	<!-- TabHost -->
	
	<string name="menu_map">Mapa</string>
	<string name="menu_records">Histórico</string>
	<string name="menu_favorites">Favoritos</string>
	<string name="menu_taximeter">Taximetro</string>
	<string name="menu_config">Configurações</string>
	<string name="menu_exit">Sair</string>
	
	<!-- Taximeter -->
	
	<string name="taximeter_city">Selecione a sua cidade</string>
	<string name="map_taximeter_info">Escolha a sua origem e clique em prosseguir.</string>
	<string name="map_taximeter_info_next">Escolha o seu destino e clique em finalizar.</string>
	<string name="map_taximeter_next">Prosseguir</string>
	<string name="map_taximeter_finish">Finalizar</string>
	<string name="map_taximeter_restart">Reiniciar</string>
	<string name="map_taximeter_error_marker">Escolha o seu destino antes de prosseguir!</string>
	<string name="map_taximeter_flag1">Bandeira 1: R$</string>
	<string name="map_taximeter_flag2">Bandeira 2: R$</string>
	<string name="map_taximeter_distance">Distância:</string>
	<string name="map_taximeter_duration">Tempo Estimado:</string>
	
	<!-- Records -->
	
	<string name="rec_title_info">Histórico de solicitações</string>
	
	<!-- Register -->
	
	<string name="register_name">Nome *</string>
	<string name="register_name_description">John Lennon</string>
	<string name="register_email">E-mail *</string>
	<string name="register_email_description">john@gmail.com</string>
	<string name="register_phone">Telefone *</string>
	<string name="register_phone_description">1199999999</string>
	<string name="register_pw">Senha *</string>
	<string name="register_button_client">Registrar como um Cliente</string>
	<string name="register_button_taxi">Registrar como um Taxista</string>
	<string name="register_button">Registrar</string>
	<string name="register_lang">Idioma</string>
	<string name="spinner_lang">Escolher idioma</string>
    <string-array name="spinner_array">
        <item>Português</item>
        <item>Inglês</item>
        <item>Espanhol</item>
    </string-array>
    <string name="register_continue_info_title">Cadastro realizado com sucesso!\n</string>
    <string name="register_continue_info_content">Parabéns, você acaba de ingressar nos serviços do aplicativo Taxi-Android!\n\nAntes de prosseguir, 
        por favor, leia com atenção o manual de instruções abaixo e clique em finalizar.</string>
    <string name="register_button_next">Finalizar Cadastro</string>
    <string name="register_error_name">Preencha o campo NOME corretamente!</string>
    <string name="register_error_email">Preencha o campo E-MAIL corretamente!</string>
    <string name="register_error_phone">Preencha o campo TELEFONE corretamente!</string>
    <string name="register_error_pw">Preencha o campo SENHA corretamente!</string>
    <string name="register_error_off">O sistema está fora do ar!</string>
    <string name="register_error_param">Não foi possível realizar o seu cadastro!</string>
    <string name="register_error_duplicate">O e-mail informado já foi registrado!</string>
    
    <!-- Request -->
    
    <string name="req_info">Preencha os filtros de solicitação abaixo:</string>
    <string name="req_payment">Forma de pagamento *</string>
    <string name="req_animals">Transporte de animais *</string>
    <string name="req_passengers">Quantidade de passageiros</string>
    <string name="req_needs">Portador de necessidades especiais *</string>
    <string name="req_volume">Volume da bagagem em KG</string>
	<string name="spinner_payment">Forma de pagamento</string>
    <string-array name="spinner_array_pay">
        <item>Dinheiro</item>
        <item>Cartão de Crédito ou Débito</item>
    </string-array>
	<string name="spinner_passengers">Quantidade de passageiros</string>
    <string-array name="spinner_array_pas">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="req_kg">KG</string>
    <string name="req_bt_send">Enviar solicitação</string>
    
    <!-- Presentation -->
    
    <string name="present_"></string>
    
    <!-- ProgressDialog -->
    
    <string name="pd_title">Transmitindo dados</string>
    <string name="pd_content_register">Aguarde, estamos realizando o seu cadastro&#8230;</string>
    <string name="pd_content_login">Aguarde, estamos realizando o seu login&#8230;</string>
    <string name="pd_content_loading">Aguarde, estamos processando a sua requisição..</string>
    
    <!-- Other -->
    
    <string name="toggle_turn_on">Sim</string>
    <string name="toggle_turn_off">Não</string>
  
</resources>