<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background" >

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/request_logo" />

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/req_info"
            android:textColor="#e40000"
            android:textSize="16dip" />

        <TextView
            android:id="@+id/tv_payment"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tv_welcome"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dip"
            android:text="@string/req_payment"
            android:textColor="#000" />
        
        <Spinner
            android:id="@+id/sp_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tv_payment"
            android:layout_marginLeft="23dip"
            android:prompt="@string/spinner_lang" />
        
        <TextView
            android:id="@+id/tv_animals"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/sp_payment"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="30dip"
            android:text="@string/req_animals"
            android:textColor="#000" />
        
        <ToggleButton
            android:id="@+id/tb_animals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tv_animals"
            android:layout_marginLeft="30dip"
	        android:textOn="@string/toggle_turn_on"
	        android:textOff="@string/toggle_turn_off" />
        
        <TextView
            android:id="@+id/tv_passengers"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tb_animals"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="30dip"
            android:text="@string/req_passengers"
            android:textColor="#000" />
        
        <Spinner
            android:id="@+id/sp_passengers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tv_passengers"
            android:layout_marginLeft="23dip"
            android:prompt="@string/spinner_passengers" />
        
        <TextView
            android:id="@+id/tv_needs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/sp_passengers"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="30dip"
            android:text="@string/req_needs"
            android:textColor="#000" />
        
        <ToggleButton
            android:id="@+id/tb_needs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tv_needs"
            android:layout_marginLeft="30dip"
	        android:textOn="@string/toggle_turn_on"
	        android:textOff="@string/toggle_turn_off" />
        
        <TextView
            android:id="@+id/tv_volume"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tb_needs"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="30dip"
            android:text="@string/req_volume"
            android:textColor="#000" />
        
		<EditText
            android:id="@+id/et_volume"
            android:layout_width="60dip"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tv_volume"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="30dip"
            android:ems="10"
            android:inputType="number" />

        <Button
            android:id="@+id/bt_send"
            android:layout_width="260dip"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_volume"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            android:background="#FFD700"
            android:padding="10dip"
            android:text="@string/req_bt_send"
            android:textColor="#222"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/ib_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/bt_send"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/register_button"
            android:src="@drawable/register_info" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/et_volume"
            android:layout_alignBottom="@+id/et_volume"
            android:layout_toRightOf="@+id/sp_passengers"
            android:text="@string/req_kg" 
            android:textColor="#000"
            android:textSize="16dip" />

    </RelativeLayout>

</ScrollView>