<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background" >

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:orientation="vertical" >
        
        <ImageView
            android:id="@+id/logo"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/configuration_logo" />

        <TextView
            android:id="@+id/tv_lang"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="30dip"
            android:layout_marginTop="0dip"
            android:layout_below="@+id/logo"
            android:text="@string/register_lang"
            android:textColor="#000" />

        <Spinner
            android:id="@+id/sp_lang"
            android:layout_width="270dip"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tv_lang"
            android:layout_marginLeft="23dip"
            android:prompt="@string/spinner_lang" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/sp_lang"
            android:layout_marginLeft="30dip"
            android:text="@string/register_name"
            android:textColor="#000" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="270dip"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tv_name"
            android:layout_marginLeft="25dip"
            android:inputType="text" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/et_name"
            android:layout_marginLeft="30dip"
            android:text="@string/register_email"
            android:textColor="#000" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="270dip"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tv_email"
            android:layout_marginLeft="25dip"
            android:inputType="text" />
        
        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/et_email"
            android:layout_marginLeft="30dip"
            android:text="@string/register_phone"
            android:textColor="#000" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="270dip"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tv_phone"
            android:layout_marginLeft="25dip"
            android:inputType="phone" />
        
        <TextView
            android:id="@+id/tv_vehicle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/et_phone"
            android:layout_marginLeft="30dip"
            android:text="@string/config_vehicle"
            android:textColor="#000" />

        <EditText
            android:id="@+id/et_vehicle"
            android:layout_width="270dip"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tv_vehicle"
            android:layout_marginLeft="25dip"
            android:inputType="text" />
        
        <TextView
            android:id="@+id/tv_rg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/et_vehicle"
            android:layout_marginLeft="30dip"
            android:text="@string/config_rg"
            android:textColor="#000" />

        <EditText
            android:id="@+id/et_rg"
            android:layout_width="270dip"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tv_rg"
            android:layout_marginLeft="25dip"
            android:inputType="text" />
        
        <TextView
            android:id="@+id/tv_license"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/et_rg"
            android:layout_marginLeft="30dip"
            android:text="@string/config_license"
            android:textColor="#000" />

        <EditText
            android:id="@+id/et_license"
            android:layout_width="270dip"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tv_license"
            android:layout_marginLeft="25dip"
            android:inputType="text" />
        
        <TextView
            android:id="@+id/tv_fluent_lang"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="30dip"
            android:layout_marginTop="0dip"
            android:layout_below="@+id/et_license"
            android:text="@string/config_lang"
            android:textColor="#000" />
        
        <CheckBox
            android:id="@+id/cb_pt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="30dip"
            android:layout_below="@+id/tv_fluent_lang"
            android:text="@string/config_lang_pt" />
        
        <CheckBox
            android:id="@+id/cb_en"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="30dip"
            android:layout_below="@+id/cb_pt"
            android:text="@string/config_lang_en" />
        
        <CheckBox
            android:id="@+id/cb_es"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="30dip"
            android:layout_below="@+id/cb_en"
            android:text="@string/config_lang_es" />

        <TextView
            android:id="@+id/tv_pw"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/cb_es"
            android:layout_marginLeft="30dip"
            android:text="@string/register_pw"
            android:textColor="#000" />

        <EditText
            android:id="@+id/et_pw"
            android:layout_width="270dip"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tv_pw"
            android:layout_marginLeft="25dip"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/tv_error"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/et_pw"
            android:gravity="center"
            android:padding="10dip"
		    android:textColor="#F7D62F" />

        <Button
            android:id="@+id/bt_register"
            android:layout_width="260dip"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tv_error"
            android:layout_marginLeft="30dip"
            android:background="#FFD700"
            android:padding="7dip"
            android:text="@string/config_alter"
            android:textColor="#222"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/ib_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bt_register"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/register_button"
            android:src="@drawable/register_info" />
    </RelativeLayout>
</ScrollView>