<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background" >

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/taximeter_logo" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/logo"
            android:layout_marginLeft="30dip"
            android:text="@string/taximeter_city"
            android:textColor="#000" />
        
        <Spinner
            android:id="@+id/sp_city"
            android:layout_width="270dip"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tv_email"
            android:layout_marginLeft="23dip"
            android:prompt="@string/spinner_lang" />

        <Button
            android:id="@+id/bt_login"
            android:layout_width="260dip"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/sp_city"
            android:layout_marginLeft="30dip"
            android:layout_marginTop="180dp"
            android:background="#FFD700"
            android:padding="10dip"
            android:text="@string/map_taximeter_next"
            android:textColor="#222"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/ib_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bt_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/register_button"
            android:src="@drawable/register_info" />

    </RelativeLayout>

</ScrollView>