<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background" >

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/main_logo" />

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/main_welcome"
            android:textColor="#000" />

        <Button
            android:id="@+id/bt_login"
            android:layout_width="260dip"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/bt_exit"
            android:layout_below="@+id/logo"
            android:layout_marginTop="70dp"
            android:background="#FFD700"
            android:padding="10dip"
            android:text="@string/main_button_login"
            android:textColor="#222"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bt_register"
            android:layout_width="260dip"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/bt_login"
            android:layout_below="@+id/bt_login"
            android:layout_marginTop="34dp"
            android:background="#FFD700"
            android:padding="10dip"
            android:text="@string/register_button"
            android:textColor="#222"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bt_exit"
            android:layout_width="260dip"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bt_register"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            android:background="#FFD700"
            android:padding="10dip"
            android:text="@string/main_button_exit"
            android:textColor="#222"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/ib_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/bt_exit"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/register_button"
            android:src="@drawable/register_info" />
    </RelativeLayout>

</ScrollView>