<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background" >

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:orientation="vertical" >
        
        <ImageView
            android:id="@+id/logo"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/register_logo" />

        <TextView
            android:id="@+id/tv_info_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="27dip"
            android:layout_marginTop="20dip"
            android:layout_below="@+id/logo"
            android:text="@string/register_continue_info_title"
            android:textColor="#000" 
            android:textAppearance="?android:attr/textAppearanceMedium"/>
        
        <TextView
            android:id="@+id/tv_info_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="25dip"
            android:layout_marginTop="0dip"
            android:layout_below="@+id/tv_info_title"
            android:text="@string/register_continue_info_content"
            android:textColor="#000"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <ImageButton
            android:id="@+id/ib_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_info_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/register_button"
            android:src="@drawable/register_info" />

        <Button
            android:id="@+id/bt_next"
            android:layout_width="260dip"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/ib_help"
            android:layout_marginLeft="30dip"
            android:background="#FFD700"
            android:layout_marginTop="50dip"
            android:padding="7dip"
            android:text="@string/register_button_next"
            android:textColor="#222"
            android:textStyle="bold" />
        
		<TextView
            android:id="@+id/tv_error"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/bt_next"
            android:gravity="center"
            android:padding="10dip"
            android:textColor="#F7D62F" />
        
    </RelativeLayout>
</ScrollView>